Interpret principal components

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -4835,7 +4835,7 @@
    "source": [
     "### Discussion 2.2: Perform Dimensionality Reduction\n",
     "\n",
-    "After performing PCA on the entire cleaned dataset using all the features, plotting the variance explained per component sequentially and cumulatively gave some insight into the number of components to keep. I chose to use 63 components as this accounts for almost 90% of the variance in the data. This reduced the dimensionality of the dataset from 119 to 63."
+    "After performing PCA on the entire cleaned dataset using all the features, plotting the variance explained per component sequentially and cumulatively gave some insight into the number of components to keep. I chose to use 63 components as this accounts for almost 90% of the variance in the data. This reduced the dimensionality of the dataset from 119 to 63 dimensions."
    ]
   },
   {
@@ -4846,7 +4846,7 @@
     "\n",
     "Now that we have our transformed principal components, it's a nice idea to check out the weight of each variable on the first few components to see if they can be interpreted in some fashion.\n",
     "\n",
-    "As a reminder, each principal component is a unit vector that points in the direction of highest variance (after accounting for the variance captured by earlier principal components). The further a weight is from zero, the more the principal component is in the direction of the corresponding feature. If two features have large weights of the same sign (both positive or both negative), then increases in one tend expect to be associated with increases in the other. To contrast, features with different signs can be expected to show a negative correlation: increases in one variable should result in a decrease in the other.\n",
+    "As a reminder, each principal component is a unit vector that points in the direction of highest variance (after accounting for the variance captured by earlier principal components). The further a weight is from zero, the more the principal component is in the direction of the corresponding feature. If two features have large weights of the same sign (both positive or both negative), then increases in one tend to be associated with increases in the other. To contrast, features with different signs can be expected to show a negative correlation: increases in one variable should result in a decrease in the other.\n",
     "\n",
     "- To investigate the features, you should map each weight to their corresponding feature name, then sort the features according to weight. The most interesting features for each principal component, then, will be those at the beginning and end of the sorted list. Use the data dictionary document to help you understand these most prominent features, their relationships, and what a positive or negative value on the principal component might indicate.\n",
     "- You should investigate and interpret feature associations from the first three principal components in this substep. To help facilitate this, you should write a function that you can call at any time to print the sorted list of feature weights, for the *i*-th principal component. This might come in handy in the next step of the project, when you interpret the tendencies of the discovered clusters."
@@ -4854,37 +4854,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest weighted:\n",
+      "LP_STATUS_GROB_1.0        0.200624\n",
+      "PLZ8_ANTG3                0.189327\n",
+      "PLZ8_ANTG4                0.182096\n",
+      "CAMEO_INTL_2015_WEALTH    0.180865\n",
+      "ORTSGR_KLS9               0.165948\n",
+      "Name: 0, dtype: float64\n",
+      "\n",
+      "Lowest Weighted:\n",
+      "KBA05_GBZ           -0.183863\n",
+      "KBA05_ANTG1         -0.186785\n",
+      "PLZ8_ANTG1          -0.188091\n",
+      "MOBI_REGIO          -0.196844\n",
+      "FINANZ_MINIMALIST   -0.214001\n",
+      "Name: 0, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Map weights for the first principal component to corresponding feature names\n",
     "# and then print the linked values, sorted by weight.\n",
-    "# HINT: Try defining a function here or in a new cell that you can reuse in the\n",
-    "# other cells.\n",
-    "\n"
+    "def get_weights(n):\n",
+    "    weights_df = pd.DataFrame(pca.components_,columns=list(azdias_encoded.columns)).iloc[n].sort_values(ascending = False)\n",
+    "    print(\"Highest weighted:\\n{}\\n\\nLowest Weighted:\\n{}\".format(weights_df.head(), weights_df.tail()))\n",
+    "    \n",
+    "   \n",
+    "get_weights(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest weighted:\n",
+      "ALTERSKATEGORIE_GROB    0.217260\n",
+      "FINANZ_VORSORGER        0.202607\n",
+      "ZABEOTYP_3              0.200631\n",
+      "SEMIO_ERL               0.182269\n",
+      "SEMIO_LUST              0.152885\n",
+      "Name: 1, dtype: float64\n",
+      "\n",
+      "Lowest Weighted:\n",
+      "SEMIO_TRADV                    -0.197879\n",
+      "FINANZ_SPARER                  -0.200924\n",
+      "FINANZ_UNAUFFAELLIGER          -0.202659\n",
+      "SEMIO_REL                      -0.206841\n",
+      "PRAEGENDE_JUGENDJAHRE_DECADE   -0.213417\n",
+      "Name: 1, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Map weights for the second principal component to corresponding feature names\n",
     "# and then print the linked values, sorted by weight.\n",
-    "\n"
+    "get_weights(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest weighted:\n",
+      "SEMIO_VERT     0.326766\n",
+      "SEMIO_SOZ      0.258551\n",
+      "SEMIO_FAM      0.257621\n",
+      "SEMIO_KULT     0.245636\n",
+      "FINANZTYP_5    0.140425\n",
+      "Name: 2, dtype: float64\n",
+      "\n",
+      "Lowest Weighted:\n",
+      "SEMIO_ERL    -0.198039\n",
+      "SEMIO_KRIT   -0.268843\n",
+      "SEMIO_DOM    -0.294726\n",
+      "SEMIO_KAEM   -0.323292\n",
+      "ANREDE_KZ    -0.352147\n",
+      "Name: 2, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Map weights for the third principal component to corresponding feature names\n",
     "# and then print the linked values, sorted by weight.\n",
-    "\n"
+    "get_weights(2)"
    ]
   },
   {
@@ -4893,7 +4962,11 @@
    "source": [
     "### Discussion 2.3: Interpret Principal Components\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your observations from detailed investigation of the first few principal components generated. Can we interpret positive and negative values from them in a meaningful way?)"
+    "The first component has high positive correlations between LP_STATUS_GROB_1.0, PLZ8_ANTG3, and PLZ8_ANTG4 and high negative correlations with FINANZ_MINIMALIST, MOBI_REGIO and PLZ8_ANTG1. The high negative correlation between LP_STATUS_GROB_1.0 and FINANZ_MINIMALIST is indicative that the less an individual is a FINANZ_MINIMALIST the less likely they are to be a low income earner. It makes sense that PLZ8_ANTG3 and PLZ8_ANTG4 positively correspond with each other as these features refer to the number of 6-10 family homes and 10+ family homes in the PLZ8 Region, respectively. It also seems intuitive that PLZ8_ANTG1, which correspond to 1-2 family houses in the PLZ8 region, is inversely related to the 6+ family houses categories. Those who live in 6-10 and 10+ family homes may share similar low-income financial situations and characteristics different from those who live in 1-2 family homes.\n",
+    "\n",
+    "The second component has some interesting correlations. ALTERSKATEGORIE_GROB and PRAEGENDE_JUGENDJAHRE_DECADE are inversely related to each other. As PRAEGENDE_JUGENDJAHRE, or decade of a persons youth increases from the 40s to the 90s, ALTERSKATEGORIE_GROB or a persons estimated age decreases. This makes perfect sense, though it is interesting to see in the data. FINANZ_VORSORGER (preparedness) is inversely related to FINANZ_UNAUFFAELLIGER (inconspicuous) and FINANZ_SPARER (Money Saver). This could be due to different spending habits of those in FINANZ_VORSORGER compared to those in FINANZ_UNAUFFAELLIGER and FINANZ_SPARER.\n",
+    "\n",
+    "The third component seems to correspond to personality type and possible gender differences. Andrede KZ (gender) is negatively correlated with SEMIO_VERT, SEMIO_SOZ, SEMIO_FAM, SEMIO_KULT. In the data dictionary, these correspond respectively to personality types dreamful, socially-minded, family-minded and cultural-minded. These are all negatively correlated with SEMIO_KAEM, SEMIO_DOM, SEMIO_KRIT, SEMIO_ERL and SEMIO_RAT which are personality types combative attitude, dominant-minded, critical-minded, event-oriented and rational, respectively."
    ]
   },
   {
