Re-fit KMeans model with 14 clusters to general population demographics

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -5043,13 +5043,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Re-fit the k-means model with the selected number of clusters and obtain\n",
     "# cluster predictions for the general population demographics data.\n",
-    "\n"
+    "#from sklearn.cluster import KMeans\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=14, n_init=20, random_state=42)\n",
+    "\n",
+    "kmeans_model = kmeans.fit(azdias_pca)\n",
+    "\n",
+    "gen_pop_pred = kmeans_model.predict(azdias_pca)"
    ]
   },
   {
@@ -5058,7 +5064,7 @@
    "source": [
     "### Discussion 3.1: Apply Clustering to General Population\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding clustering. Into how many clusters have you decided to segment the population?)"
+    "After iterating over 22 Kmeans cluster counts from 3 to 24 clusters and plotting the resulting fitted cluster's SSE (Sum of Squared Error) score, I chose to use 14 clusters as the best fit to segment the population data. There is an elbow in the SSE vs Cluster plot at 14 clusters after which more clusters didn't substantially reduce the SSE score."
    ]
   },
   {
