Apply cleaning function, PCA and clustering to customer data

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -5082,24 +5082,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the customer demographics data.\n",
-    "customers = "
+    "customers = pd.read_csv('Udacity_CUSTOMERS_Subset.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apply preprocessing, feature transformation, and clustering from the general\n",
     "# demographics onto the customer data, obtaining cluster predictions for the\n",
     "# customer demographics data.\n",
-    "\n"
+    "\n",
+    "# clean customer data using cleaning function created earlier\n",
+    "customers_low_nan, customers_high_nan = clean_data(customers)\n",
+    "\n",
+    "# transform the dataset by filling nan values using imputer object from general population data\n",
+    "customers_imp = imputer.transform(customers_low_nan)\n",
+    "\n",
+    "# apply feature scaling to the customer demographics data using scaler object from general population data\n",
+    "customers_scaled = scaler.transform(customers_imp)\n",
+    "\n",
+    "# apply pca to the customer demographics data using pca object from general population data\n",
+    "customers_pca = pca.transform(customers_scaled)\n",
+    "\n",
+    "# obtain cluster predictions for the customer demographics data using fitted kmeans model from general population data\n",
+    "customers_pred = kmeans_model.predict(customers_pca)"
    ]
   },
   {
