Discuss summary findings of customer compared to general populace data

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -8174,7 +8174,11 @@
    "source": [
     "### Discussion 3.3: Compare Customer Data to Demographics Data\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting findings and conclusions from the clustering analysis. Can we describe segments of the population that are relatively popular with the mail-order company, or relatively unpopular with the company?)"
+    "Mapping the customer data onto the general population clusters then plotting the proportions of customers to the general population for each cluster clearly shows that some segments of the population are popular with the mail order company while other segments of the population are unpopular with the company. To illuminate which segments of the population are within each cluster, the original data from the dataset had to be retrieved. This was done using the inverse_transform methods of the PCA and Scaler objects on the clustered data. To find which components were most important in each cluster, a function was created to return the top 4 PCA components from the cluster. The PCA components could then be broken down into their most important weighted variables. With the dataframe of the inverse_transformed data from each cluster at hand, the original values for the top PCA components and for all the variables could be retrieved, identifying what type of people are in each cluster.\n",
+    "\n",
+    "Based on the clusters with high customer proportions compared to the general population, the target audience for the company is predominantly made up of males who are 46+ years old who are home owners with high levels of income. They are likely part of an older family or mature couple from west Germany with a rational, critical and combative attitude.\n",
+    "\n",
+    "Segments of the population unpopular with the company are mostly middle aged to younger women who make a lower income and are of less affluent households. They have more dreamful, social and sensually minded personality types and are less dominate, combative and critical minded."
    ]
   },
   {
